@@ -1,0 +1,29 @@
+<?php
+/**
+ * Peoples
+ *
+ * Copyright 2010 by Shaun McCormick <shaun@modx.com>
+ *
+ * Peoples is free software; you can redistribute it and/or modify it under the
+ * terms of the GNU General Public License as published by the Free Software
+ * Foundation; either version 2 of the License, or (at your option) any later
+ * version.
+ *
+ * Peoples is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
+ * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along with
+ * Peoples; if not, write to the Free Software Foundation, Inc., 59 Temple
+ * Place, Suite 330, Boston, MA 02111-1307 USA
+ *
+ * @package peoples
+ */
+/**
+ * English language properties topic
+ *
+ * @package peoples
+ * @subpackage lexicon
+ * @language en
+ */
+$_lang['peoples.usergroup_err_nf'] = 'User Group not found.';
