@@ -2,6 +2,7 @@ Changelog for Peoples.
 
 Peoples 1.0.0
 ====================================
+- Added PeopleGroup snippet for displaying Users in a User Group
 - Added support in PeopleGroups snippet to show role for each usergroup when user parameter is specified
 - Added Peoples and PeopleGroups snippets
 - Initial commit
